# gb-emu

./: .gitmodules
cboy/: .clangd  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  compile_commands.json  default.nix  emulation.c  emulation.h  main.c  opcodes.json  shell.nix
cboy/.cache/clangd/index/: SDL.c.C2E37D75A4640F0A.idx  SDL.h.353A66DC63F60D52.idx  SDL_RLEaccel.c.393DB68A15723828.idx  SDL_RLEaccel_c.h.B9AB3275B6DB2638.idx  SDL_alsa_audio.c.EFB53A9D31AB8D50.idx  SDL_alsa_audio.h.63EBE66FB0668C47.idx  SDL_appid.c.74B74FED457A6403.idx  SDL_appid.h.BDB4389F07C9D444.idx  SDL_assert.c.B66CDA1486672252.idx  SDL_assert.h.ABA50B70695C4250.idx  SDL_assert_c.h.4267B7190BA0FA91.idx  SDL_asyncio.c.A89CDF19D38077C6.idx  SDL_asyncio.h.91565969D6268786.idx  SDL_asyncio_c.h.BE8D43FF6C23AEB1.idx  SDL_asyncio_generic.c.C9986D18B94EB51E.idx  SDL_atomic.c.B94E7022E93D2DEB.idx  SDL_atomic.h.A14E0904CEBC0B53.idx  SDL_audio.c.3E460BCFDF3C46EE.idx  SDL_audio.h.F97BCD24A075E958.idx  SDL_audio_c.h.FCC18505E6BD760A.idx  SDL_audio_channel_converters.h.346584873E443BC5.idx  SDL_audiocvt.c.6B31FB38BABBBBC5.idx  SDL_audiodev.c.0F1FAE585CB90859.idx  SDL_audioqueue.c.AD3F4F2865484C4E.idx  SDL_audioqueue.h.15E7D8AC144E5E67.idx  SDL_audioresample.c.CD539A39D348B77C.idx  SDL_audioresample.h.5FC3C30B5D6A7757.idx  SDL_audiotypecvt.c.4FA497B464ED632D.idx  SDL_bits.h.D708C1C9B92F415B.idx  (+647 more)
cboy/Debug/: cboy
cboy/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cboy/include/: emulation.h  instruction.h
cboy/src/: emulation.c  instruction.c  main.c
(+512 files in other folders)
